Bug 1657627 - Refine condition used in temporary workaround code. r=botond, a=jcristau

This restricts the workaround to mobile a bit better, since the
GetIsViewportOverridden() check returns true on desktop as of bug 1644271.

Differential Revision: https://phabricator.services.mozilla.com/D86414